--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1117,7 +1117,7 @@ img {
     }
     .nav__list {
         column-gap: 0;
-        grid-template-columns: repeat(6, 1fr);
+        /* grid-template-columns: repeat(3, 1fr); */
     }
     .about__img {
         width: 300px;
