--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,7 +7,8 @@
 
     /*========== Colors ==========*/
     /* Change favorite color */
-    --hue-color: 142; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+    --hue-color: 142;
+    /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
 
     /* HSL color mode */
     --first-color: hsl(var(--hue-color), 69%, 61%);
@@ -26,7 +27,8 @@
 
 
     /*========== Font and typography ==========*/
-    --body-font: 'Poppins', sans-serif;;
+    --body-font: 'Poppins', sans-serif;
+    ;
 
     /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
     --big-font-size: 2rem;
@@ -98,7 +100,7 @@ body.dark-theme {
     cursor: pointer;
 }
 
-.change-theme:hover{
+.change-theme:hover {
     color: var(--first-color);
 }
 
@@ -121,7 +123,10 @@ body {
     color: var(--text-color);
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
     color: var(--title-color);
     font-weight: var(--font-semi-bold);
 }
@@ -212,7 +217,7 @@ img {
     color: var(--first-color);
 }
 
-@media screen and (max-width: 768px){
+@media screen and (max-width: 768px) {
     .nav__menu {
         position: fixed;
         bottom: -100%;
@@ -240,7 +245,7 @@ img {
     font-weight: var(--font-medium);
 }
 
-.nav__link:hover{
+.nav__link:hover {
     color: var(--first-color);
 }
 
@@ -270,7 +275,7 @@ img {
 
 /* Active link */
 .active-link {
-   color: var(--first-color);
+    color: var(--first-color);
 }
 
 /* Change background header */
@@ -400,9 +405,9 @@ img {
 }
 
 .button--link {
-   padding: 0;
-   background-color: transparent; 
-   color: var(--first-color);
+    padding: 0;
+    background-color: transparent;
+    color: var(--first-color);
 }
 
 .button--link:hover {
@@ -420,7 +425,7 @@ img {
     margin-right: 2rem;
     margin-bottom: 2rem;
     display: block;
-    
+
 }
 
 .about__description {
@@ -526,15 +531,19 @@ img {
 .skills__50 {
     width: 50%;
 }
+
 .skills__60 {
     width: 60%;
 }
+
 .skills__70 {
     width: 70%;
 }
+
 .skills__80 {
     width: 80%;
 }
+
 .skills__90 {
     width: 90%;
 }
@@ -662,7 +671,7 @@ img {
     font-size: var(--small-font-size);
 }
 
-.services__button:hover .button__icon{
+.services__button:hover .button__icon {
     transform: translateX(.25rem);
 }
 
@@ -751,7 +760,7 @@ img {
     text-align: justify;
 }
 
-.portfolio__button:hover .button__icon{
+.portfolio__button:hover .button__icon {
     transform: translateX(.25rem);
 }
 
@@ -773,7 +782,7 @@ img {
     right: -.5rem;
 }
 
-.swiper-container-horizontal > .swiper-pagination-bullets {
+.swiper-container-horizontal>.swiper-pagination-bullets {
     bottom: -2.5rem;
 }
 
@@ -887,7 +896,7 @@ img {
 .contact__content {
     background-color: var(--input-color);
     border-radius: .5rem;
-    padding: .75rem 1rem .25rem ;
+    padding: .75rem 1rem .25rem;
 }
 
 .contact__label {
@@ -953,7 +962,7 @@ img {
 .footer__copy {
     font-size: var(--smaller-font-size);
     text-align: center;
-    color: var(--text-color-light);
+    color: #fff;
     margin-top: var(--mb-3);
 }
 
@@ -980,7 +989,7 @@ img {
     transition: .4s;
 }
 
-.scrollup:hover{
+.scrollup:hover {
     background-color: var(--first-color-alt);
 }
 
@@ -1026,6 +1035,7 @@ img {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+
 @media screen and (max-width: 350px) {
     .container {
         margin-left: var(--mb-1);
@@ -1035,6 +1045,7 @@ img {
     .nav__menu {
         padding: 2rem .25rem 4rem;
     }
+
     .nav__list {
         column-gap: 0;
         grid-template-columns: repeat(3, 1fr);
@@ -1043,6 +1054,7 @@ img {
     .home__content {
         grid-template-columns: .25fr 3fr;
     }
+
     .home__blob {
         width: 180px;
     }
@@ -1059,9 +1071,11 @@ img {
         grid-template-columns: max-content;
         justify-content: center;
     }
+
     .services__content {
         padding-right: 3.5rem;
     }
+
     .services__modal {
         padding: 0 .5rem;
     }
@@ -1071,30 +1085,38 @@ img {
     }
 
     .testimonial__data,
-    .testimonial__header{
+    .testimonial__header {
         flex-direction: column;
         align-items: center;
     }
+
     .testimonial_img {
         margin-right: 0;
         margin-bottom: var(--mb-0-25);
     }
+
     .testimonial__data,
     .testimonial__description {
         text-align: center;
+    }
+
+    .githubstates {
+        width: 100%;
     }
 
 }
 
 
 /* For medium devices */
-@media screen and (min-width: 568px){
+@media screen and (min-width: 568px) {
     .home__content {
         grid-template-columns: max-content 2fr 1fr;
     }
+
     .home__data {
         grid-column: initial;
     }
+
     .home__img {
         order: 1;
         justify-self: right;
@@ -1115,30 +1137,46 @@ img {
         justify-content: center;
 
     }
+
     .nav__list {
         column-gap: 0;
         grid-template-columns: repeat(6, 1fr);
     }
+
     .about__img {
         width: 300px;
     }
 
+    .githubstates {
+        width: 100%;
+    }
+
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 767px) {
     .scroll-header {
         box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
         border-radius: 5px 5px 0px 0px;
         height: 35px;
         align-content: center;
     }
+
+    .githubstates {
+        margin: auto;
+        width: 40%;
+    }
+
+    .githubstates {
+        width: 100%;
+    }
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
     .container {
         margin-left: auto;
         margin-right: auto;
     }
+
     .nav,
     .container {
         max-width: 767px;
@@ -1151,6 +1189,7 @@ img {
     .section {
         padding: 6rem 0 2rem;
     }
+
     .section__subtitle {
         margin-bottom: 4rem;
     }
@@ -1159,6 +1198,7 @@ img {
         top: 0;
         bottom: initial;
     }
+
     .header,
     .main,
     .footer__container {
@@ -1169,15 +1209,18 @@ img {
         height: calc(var(--header-height) + 1.5rem);
         column-gap: 2.5rem;
     }
+
     .nav__icon,
     .nav__close,
     .nav__toggle {
         display: none;
     }
+
     .nav_list {
         display: flex;
         column-gap: 2rem;
     }
+
     .nav__menu {
         margin-left: auto;
     }
@@ -1189,42 +1232,53 @@ img {
     .home__container {
         row-gap: 5rem;
     }
+
     .home__content {
         padding-top: 5.5rem;
         column-gap: 2rem;
     }
+
     .home__blob {
         width: 270px;
     }
+
     .home__scroll {
         display: block;
     }
-    .home__scroll-button{
+
+    .home__scroll-button {
         margin-left: 3rem;
     }
 
     .about__container {
         column-gap: 5rem;
     }
+
     .about__img {
         width: 300px;
     }
+
     .about__description {
         text-align: justify;
     }
+
     .about__info {
         justify-content: space-between;
     }
+
     .about__buttons {
         justify-content: center;
     }
 
     .qualification__tabs {
-        justify-content: center;;
+        justify-content: center;
+        ;
     }
+
     .qualification__button {
         margin: 0 var(--mb-1);
     }
+
     .qualification__sections {
         grid-template-columns: .5fr;
     }
@@ -1233,12 +1287,15 @@ img {
         grid-template-columns: repeat(3, 218px);
         justify-content: center;
     }
+
     .services__icon {
         font-size: 2rem;
     }
+
     .services__content {
         padding: 6rem 0 2rem 2.5rem;
     }
+
     .services__modal-content {
         width: 450px;
     }
@@ -1247,16 +1304,19 @@ img {
         width: 400px;
         height: 220px;
     }
-    .portfolio__content{
+
+    .portfolio__content {
         align-items: center;
     }
 
     .project {
         text-align: initial;
     }
+
     .project__bg {
         background: none;
     }
+
     .project__container {
         background-color: var(--first-color-second);
         border-radius: 1rem;
@@ -1264,6 +1324,7 @@ img {
         grid-template-columns: 1fr max-content;
         column-gap: 3rem;
     }
+
     .project__data {
         padding-top: .8rem;
     }
@@ -1271,29 +1332,39 @@ img {
     .footer__container {
         grid-template-columns: repeat(3, 1fr);
     }
+
     .footer__bg {
         padding: 3rem 0 3.5rem;
     }
+
     .footer__links {
         flex-direction: row;
         column-gap: 2rem;
     }
+
     .footer__socials {
         justify-self: flex-end;
     }
-    .footer__copy {
+
+    /* .footer__copy {
         margin-top: 4.5rem;
-    }
+    } */
 
     .portfolio__figure {
         justify-self: center;
+    }
+
+    .githubstates {
+        margin: auto;
+        width: 100%;
     }
 
 }
 
 
 /* For large devices */
-@media screen and (min-width: 1024px){
+@media screen and (min-width: 1024px) {
+
     .header,
     .main,
     .footer__container {
@@ -1316,23 +1387,76 @@ img {
     .portfolio__content {
         column-gap: 5rem;
     }
+
     .swiper-portfolio-icon {
         font-size: 3.5rem;
     }
+
     .swiper-button-prev {
         left: -3.5rem;
     }
+
     .swiper-button-next {
         right: -3.5rem;
     }
-    .swiper-container-horizontal > .swiper-pagination-bullets {
+
+    .swiper-container-horizontal>.swiper-pagination-bullets {
         bottom: -4.5rem;
     }
 
     .contact__form {
         width: 460px;
     }
+
     .contact__inputs {
         grid-template-columns: repeat(2, 1fr);
     }
+
+    .githubstates {
+        width: 40%;
+    }
+
+}
+
+
+/* github calender */
+.Github-calendar {
+    margin: auto;
+    color: var(--first-color);
+}
+
+.Github-calendar div {
+    margin: 20px auto
+}
+
+.text-muted {
+    color: var(--first-color);
+    font-size: var(--small-font-size);
+}
+
+.contrib-number {
+    color: var(--first-color);
+    font-size: var(--h3-font-size);
+}
+
+.Link--muted,
+.contrib-column {
+    padding: 0;
+    background-color: transparent;
+    color: var(--first-color);
+}
+
+.Link--muted:hover,
+.contrib-column :hover {
+    background-color: transparent;
+    color: var(--first-color-alt);
+}
+
+.githubstates {
+    margin: auto;
+}
+
+.github-images {
+    display: flex;
+    align-items: center;
 }
